Bug 1825006 - Fix incorrect OPFS file names. r=dom-storage-reviewers,saschanaz,janv

Differential Revision: https://phabricator.services.mozilla.com/D174648